fixed nav bar on mobile

--- a/style.css
+++ b/style.css
@@ -40,7 +40,6 @@ body {
     display: none;
     justify-content: flex-end;
     align-items: center;
-    padding-right: 20px;
 }
 
 .nav-single-item {
@@ -59,6 +58,7 @@ body {
     .nav-list-container {
         grid-column: 3;
         display: flex;
+        padding-right: 20px;
     }
 
     .icon {
@@ -79,15 +79,20 @@ body {
         position: absolute;
         top: 0;
         right: 0;
-        margin: 25px;
-        color: #003459;
+        margin: 15px;
+    }
+
+    i {
+        background-color: #003459;
+        padding: 10px;
+        color: #FFFFFF;
     }
 
     .nav-list-container {
         display: none;
         width: max-content;
         padding: 0;
-        margin: auto;
+        margin: auto auto auto -10px;
     }
 
     .nav-single-item {
